Fix background images not showing on heroku

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -7,7 +7,7 @@
   margin: 0;
 }
 .jumbotron.home {
-  background-image: url('home/walking-sunset.jpg');
+  background-image: image-url('home/walking-sunset.jpg');
   background-repeat: no-repeat;
   background-position: 0 25%;
   background-size: cover;
@@ -49,7 +49,7 @@
 }
 
 .jumbotron.story {
-  background-image: url('home/flowers-bg.jpg');
+  background-image: image-url('home/flowers-bg.jpg');
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
